--- a/locales/pl.json
+++ b/locales/pl.json
@@ -1,38 +1,38 @@
 {
     "ADD":"DODAJ",
-    "ALL":"WSZYSTKIE",
+    "ALL":"WSZYSTKO",
     "ALL Monsters":"WSZYSTKIE Pokemony",
     "ALL Quests":"WSZYSTKIE Questy",
     "ALL Raids/Eggs":"WSZYSTKIE Raidy",
     "CANCEL":"ANULUJ",
     "Cleaning Activated":"Czyszczenie aktywne",
-    "Cleaning activated on":"Czyszczenie aktywne w<br>",
+    "Cleaning activated on":"Czyszczenie aktywne w:",
     "command":"",
     "CP":"CP",
     "DELETE":"USUŃ",
     "DELETE ALL":"USUŃ WSZYSTKO",
     "DISTANCE":"ODLEGŁOŚĆ",
-    "Eggs":"Raidy niewyklute",
+    "Eggs":"Raid niewykluty",
     "Eggs Level":"Level Raidów",
     "Error":"Error",
     "GREAT":"GREAT",
     "IV":"IV",
     "LEVEL":"LEVEL",
     "meters":"metrów",
-    "Please set it in discord using":"Opcjonalnie ustaw lokalizację na discordzie używając komendy",
+    "Please set it in discord using":"Opcjonalnie możesz ustawić lokalizację na discordzie używając komendy",
     "POKÉMONS":"POKEMONY",
     "POKÉMONS TRACKED":"ŚLEDZONE POKEMONY",
     "EGGS & RAIDS TRACKED":"ŚLEDZONE RAIDY",
     "QUESTS TRACKED":"ŚLEDZONE QUESTY",
     "QUESTS":"QUESTY",
     "RAIDS":"RAIDY",
-    "Raids":"Raidy",
+    "Raids":"Raid wykluty",
     "Raids Level":"Level Raida",
     "Settings updated successfully":"Ustawienia zostały zaktualizowane",
     "STATS":"STATYSTYKI",
-    "Successfully Added Monster Alarm":"Dodano Pokemona do powiadomień",
-    "Successfully Added Quest Alarm(s)":"Dodano Quest do powiadomień",
-    "Successfully Added Raids Alarm(s)":"Dodano Raid do powiadomień",
+    "Successfully Added Monster Alarm(s)":"Dodano Pokemona(y) do powiadomień",
+    "Successfully Added Quest Alarm(s)":"Dodano Quest(y) do powiadomień",
+    "Successfully Added Raids Alarm(s)":"Dodano Raid(y) do powiadomień",
     "Successfully Deleted Egg Alarm":"Usunięto powiadomienie o Raidzie",
     "Successfully Deleted Eggs & Raids Alarm(s)":"Usunięto powiadomienia o Raidach",
     "Successfully Deleted Monster Alarm(s)":"Usunięto powiadomienia o Pokemonach",
@@ -44,8 +44,8 @@
     "Successfully Updated Quest Alarm":"Zaktualizowano powiadomienie o Queście",
     "Successfully Updated Raid Alarm":"Zaktualizowano powiadomienie o Raidzie",
     "Delete ALL tracked Mons?":"Usunąć śledzenie WSZYSTKICH Pokemonów?",
-    "Delete ALL Raid/Eggs?":"Usunąć śledzenie WSZYSTKICH Raidów",
-    "Delete ALL Quests?":"Usunąć śledzenie WSZYSTKICH Questów",
+    "Delete ALL Raid/Eggs?":"Usunąć śledzenie WSZYSTKICH Raidów?",
+    "Delete ALL Quests?":"Usunąć śledzenie WSZYSTKICH Questów?",
     "This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?":"Zostaną usunięte wszystkie powiadomienia o Raidach bez opcji ich przewrócenia. Na pewno chcesz to zrobić?",
     "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Zostaną usunięte wszystkie powiadomienia o Pokemonach bez opcji ich przewrócenia. Na pewno chcesz to zrobić?",
     "This will delete all your Quests Alarms and cannot be undone, are you sure ?":"Zostaną usunięte wszystkie powiadomienia o Questach bez opcji ich przewrócenia. Na pewno chcesz to zrobić?",
@@ -61,7 +61,7 @@
     "AREAS":"OBSZARY",
     "Your alarms are currently disabled!":"Twoje powiadomienia są obecnie wyłączone!",
     "You Request couldn't not be handled":"Nie udało się wykonać tej czynności",
-    "Your location is not set. Distance settings won't be taken into account.":"Lokalizacja nie została ustawiona. Filtr dotyczący doległości nie będzie funkcjonować.",
+    "Your location is not set. Distance settings won't be taken into account.":"Lokalizacja nie została ustawiona. Powiadomienia z ustawioną odległością nie będą działać!<br>",
     "Distance":"Odległość",
     "Form":"Forma",
     "Gender":"Płeć",
@@ -80,17 +80,17 @@
     "Cancel":"Anuluj",
     "Submit":"Zapisz",
     "NEW RAID ALARM":"POWIADOMIENIE DLA NOWEGO RAIDA",
-    "Select Egg Levels you want to add":"Wybierz poziom Raida, który chcesz dodać",
-    "Select Raid Levels you want to add":"Wybierz poziomy Raidów, który chcesz dodać",
+    "Select Egg Levels you want to add":"Wybierz poziom Raida niewyklutego, który chcesz dodać",
+    "Select Raid Levels you want to add":"Wybierz poziom Raida wyklutego, który chcesz dodać",
     "Select Pokémon Quests you want to add":"Wybierz Pokemony z Questów, które chcesz dodać",
     "Select the Raid Bosses you want to add":"Wybierz Raid Bossów, których chcesz dodać",
     "NEW QUEST ALARM":"POWIADOMIENIE DLA NOWEGO QUESTA",
     "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wybierz nagrody z Questów, które chcesz dodać (dostępne są tylko te obecne na mapie)",
     "Pokemons Currently available on Map":"Pokemony dostępne obecnie na mapie",
-    "Or use search below to add another pokemon":"Lub użyj poniższej szukajki, aby dodać innego Pokemona",
+    "Or use search below to add another pokemon":"Lub jako alternatywę użyj poniższej szukajki, aby dodać innego Pokemona",
     "Select Quests Items you want to add":"Wybierz Itemy z Questów, które chcesz dodać",
     "Level": "Level",
-    "Update": "Zaktualizuj",
+    "Update": "Zapisz zmiany",
     "Close":"Zamknij",
     "Other":"Inne",
     "Buy or Renew a Subscription": "Odnów subskrypcję",
@@ -101,18 +101,54 @@
     "Renew":"Odnów",
     "Subscription valid until":"Dostęp ważny do",
     "Alerts":"Powiadomienia",
-    "ALL Monters Cleaning":"Czyszczenie WSZYSTKICH Pokemonów",
-    "ALL Raid/Egg Cleaning":"Czyszczenie WSZYSTKICH Raidów",
-    "ALL Quests Cleaning":"Czyszczenie WSZYSTKICH Questów",
-    "Your Location is not set and cannot be set here!":"Twoja lokalizacja nie jest ustawiona i nie może być tu ustawiona!",
-    "Your Location is set to":"Twoja lokalizacja to",
-    "You have not set any area yet!": "Nie masz ustawionego żadnego obszaru do powiadomień!",
+    "ALL Monters Cleaning":"Czyszczenie nieaktywnych Pokemonów",
+    "ALL Raid/Egg Cleaning":"Czyszczenie niekatywnych Raidów",
+    "ALL Quests Cleaning":"Czyszczenie niekatywnych Questów",
+    "Your Location is not set and cannot be set here!":"Twoja lokalizacja nie jest ustawiona!",
+    "Your Location is set to":"Twoja lokalizacja to:",
+    "Your Location is not set yet!": "Nie masz ustawionej lokalizacji do powiadomień!",
     "Save changes":"Zapisz zmiany",
-    "YOU ARE NOT REGISTERED!":"NIE JESTEŚ ZAREJESTROWANY(A)!",
-    "Please Register in Discord using":"Aktywuj powiadomienia na discordzie używając",
-    "before using this tool":"przed rozpoczęciem korzystania z tej strony",
+    "YOU ARE NOT REGISTERED!":"BRAK DOSTĘPU DO POWIADOMIEŃ!",
+    "Please Register in Discord using":"Aktywuj powiadomienia na discordzie na kanale #powiadomienia-aktywacja, używając komendy",
+    "before using this tool":", aby móc korzystać z tej strony",
     "Do you really want to Leave?":"Na pewno chcesz się wylogować?",
     "Click 'Logout' below if you are ready to end your current session":"Kliknij 'Wyloguj się', aby się wylogować",
     "Logout":"Wyloguj się",
-    "Settings":"Ustawienia"
+    "Settings":"Ustawienia",
+	"ALARM CONFIGURATION":"",
+	"LOGIN WITH DISCORD":"ZALOGUJ SIĘ KONTEM Z DISCORDA",
+	"You have been successfully logged out":"Nastąpiło prawidłowe wylogowanie",
+	"Location updated successfully":"Lokalizacja została zaktualizowana",
+	"Address not found. Try Again":"Nie znaleziono adresu. Spróbuj ponownie",
+	"LOCATION":"LOKALIZACJA",
+	"It can be set hereunder":"Można ją ustawić poniżej",
+	"Update My Location":"Zaktualizuj lokalizację ręcznie",
+	"Street Name":"Ulica (wymagane)",
+	"City":"Miasto (wymagane)",
+	"NOT REGISTERED":"BRAK DOSTĘPU",
+	"Delete tracking for":"Usunąć powiadomienie dla:",
+	"This will delete tracking for":"Ta czynność spowoduje usunięcie śledzenia dla:",
+	"Are you sure?":"Na pewno chcesz usunąć?",
+	"Could not set Location":"Nie można ustawić lokalizacji",
+	"User denied the request for Geolocation":"Przeglądarka nie ma dostępu do wykrycia lokalizacji",
+	"Location information is unavailable":"Informacja o lokalizacji jest niedostępna",
+	"The request to get user location timed out":"Prakroczono czas uzyskiwania lokalizacji",
+	"An unknown error occurred":"Wystąpił nieznany błąd",
+	"Geolocation is not supported by this browser":"Ta przeglądarka nie jest w stanie wykryć lokalizacji",
+	"Successfully Update Distance on ALL Pokémons":"Zaktualizowano odległość we wszystkich Pokemonach",
+	"Successfully Update Distance on ALL Raids & Eggs":"Zaktualizowano odległość we wszystkich Raidach",
+	"Successfully Update Distance on ALL Quests":"Zaktualizowano odległość we wszystkich Questach",
+	"UPDATE DISTANCE":"ZAKTUALIZUJ ODLEGŁOŚĆ",
+	"Update Distance for all tracked Pokémons?":"Zaktualizować odległość dla wszystkich śledzonych Pokemonów?",
+	"This will update Distance settings for ALL tracked Pokémons":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Pokemonów",
+	"Please Set New Distance":"Nowa odległość",
+	"Update Distance for all tracked Quests?":"Zaktualizować odległość dla wszystkich śledzonych Questów?",
+	"This will update Distance settings for ALL tracked Quests":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Questów",
+	"Update Distance for all tracked Raids & Eggs?":"Zaktualizować odległość dla wszystkich śledzonych Raidów?",
+	"This will update Distance settings for ALL tracked Raids & Eggs":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Raidów",
+    "UPDATE": "ZAPISZ",
+	"You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Brak aktywnych powiadomień dla 'wszystkich' Pokemonów - wybierz generację.",
+	"You have not set any Alarms for this Generation!":"Brak aktywnych powiadomień dla tej generacji.",
+	"ALL":"WSZYSTKO",
+	"You have not set any area yet!":"Nie masz ustawionego żadnego obszaru!"
 }
