--- a/locales/fr.json
+++ b/locales/fr.json
@@ -156,6 +156,7 @@
     "UPDATE":"MAJ",
     "UPDATE DISTANCE":"MODIFIER LA DISTANCE",
     "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Vous n'avez configuré aucune Alarme pour TOUS les Pokémons. Sélectionnez une Génération!",
+    "You have not set any Alarm yet!":"Vous n'avez encore configuré aucune Alarme!",
     "You have not set any Alarms for this Generation!":"Vous n'avez configuré aucune Alarme pour cette génération!",
     "User & Channel Management":"Gestion Utilisateurs et Canaux",
     "Back to own Account":"Retour à mon compte personnel",
