--- a/locales/de.json
+++ b/locales/de.json
@@ -158,5 +158,34 @@
    "UPDATE":"AKTUALISIEREN",
    "UPDATE DISTANCE":"DISTANZ AKTUALISIEREN",
    "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Du hast noch keine Benachrichtung für ALLE Pokémon erstellt, bitte wähle eine Generation!",
-   "You have not set any Alarms for this Generation!":"Für diese Generation existiert noch keine Benachrichtigung!"
+   "You have not set any Alarms for this Generation!":"Für diese Generation existiert noch keine Benachrichtigung!",
+   "User & Channel Management":"Benutzer- und Kanalmanagement",
+   "Back to own Account":"Zum eigenen Konto wechseln",
+   "Discord or Telegram ID":"Discord oder Telegram ID",
+   "ADMIN MODE ACTIVE":"ADMIN MODUS AKTIV",
+   "User not found. Try Again":"Der Benutzer konnte nicht gefunden werden, versuche es erneut.",
+   "USERS LIST":"BENUTZERLISTE",
+   "DISCORD CHANNELS LIST":"DISCORD KANAL LISTE",
+   "TELEGRAM CHANNELS LIST":"TELEGRAM KANAL LISTE",
+   "Migrate":"Migrieren",
+   "Migrate Your Account":"Migriere dein Konto",
+   "You are currently connected as":"Du bist aktuell angemeldet als",
+   "Your account will be migrated to":"Dein Konto wird migiert nach",
+   "Migration is definitive and cannot be reversed":"Die Migration ist kann nicht rückgängig gemacht werden",
+   "Start account migration by":"Starte die Kontomigration von",
+   "logging into your target telegram account":"Anmeldung beim Telgramkonto",
+   "Sorry Migration From Telegram to Discord is not available yet":"Eine Migration von Telegram zu Discord ist aktuell nicht möglich",
+   "User Already Exist":"Der Benutzer existiert bereits",
+   "Cannot Migrate to an existing User":"Migration zu einen vorhanden Benuter ist nicht möglich",
+   "CONFIRM ACCOUNT MIGRATION":"BESTÄTIGE KONTO MIGRATION",
+   "Channel Synchronization":"Kanalsynchronisation",
+   "Successfully Synchronized Channels":"Kanalsynchronisation erfolgreich",
+   "Please select channels you want to synchronize with current channel":"Bitte wähle die Kanäle aus, die du mit dem aktuellen Kanal synchronisieren möchtest",
+   "This will DELETE AND REPLACE all current tracking from ALL chosen channels":"Dadurch werden alle aktuellen Nachrichten von ALLEN ausgewählten Kanälen gelöscht und ersetzt",
+   "TELEGRAM CHANNELS TO SYNC WITH":"TELEGRAMKANÄLE ZUM SYNCHRONISIEREN",
+   "TELEGRAM DISCORD TO SYNC WITH":"TELEGRAM DISCORD ZUM SYNCHRONISIEREN",
+   "CONFIRM CHANNEL SYNCHRONIZATION":"BESTÄTIGE KANALSYNCHRONISATION",
+   "Synchronize Other Channels with this one":"Synchronisiere andere Kanäle mit diesen Kanal.",
+   "Select Energy Rewards you want to add":"Wähle Energie Belohungen um diese hinzu zu fügen",
+   "Mega Energy":"Mega Energie"
 }
