--- a/locales/se.json
+++ b/locales/se.json
@@ -1,9 +1,9 @@
 {
 	"ADD": "LÄGG TILL",
 	"ALL": "ALLA",
-	"ALL Monsters": "ALLA monster",
-	"ALL Quests": "ALLA uppdrag",
-	"ALL Raids/Eggs": "ALLA raider / ägg",
+	"ALL Monsters": "ALLA Monster",
+	"ALL Quests": "ALLA Uppdrag",
+	"ALL Raids/Eggs": "ALLA Raider / Ägg",
 	"CANCEL": "AVBRYT",
 	"Cleaning Activated": "Städning aktiverad",
 	"Cleaning activated on": "Städning aktiverad på",
@@ -13,17 +13,17 @@
 	"DELETE ALL": "RADERA ALLT",
 	"DISTANCE": "DISTANS",
 	"Eggs": "Ägg",
-	"Eggs Level": "Ägg nivå",
+	"Eggs Level": "Ägg Nivå",
 	"Error": "Fel",
 	"GREAT": "GREAT",
 	"IV": "IV",
 	"LEVEL": "NIVÅ",
 	"meters": "meter",
 	"Please set it in discord using": "Ställ in det i discord med",
-	"POKÉMONS": "POKÉMONS",
-	"POKÉMONS TRACKED": "POKÉMONS TRACKED",
-	"EGGS & RAIDS TRACKED": "SPÅRADE ÄGG & RAID",
-	"QUESTS TRACKED": "SPÅRADE QUEST",
+	"POKÉMONS": "POKÉMON",
+	"POKÉMONS TRACKED": "SPÅRADE POKÉMON",
+	"EGGS & RAIDS TRACKED": "SPÅRADE ÄGG & RAIDER",
+	"QUESTS TRACKED": "SPÅRADE QUESTS",
 	"QUESTS": "QUESTS",
 	"RAIDS": "RAIDER",
 	"Raids": "Raider",
@@ -39,13 +39,13 @@
 	"Successfully Deleted Quest Alarm(s)": "Quest Alarm har tagits bort",
 	"Successfully Deleted Raid Alarm(s)": "Raid Alarm har tagits bort",
 	"Successfully Updated Egg Alarm": "Ägg Alarm har uppdaterats",
-	"Successfully Updated List of Areas": "Områdeslista  har uppdaterats",
+	"Successfully Updated List of Areas": "Områdeslistan har uppdaterats",
 	"Successfully Updated Monster Alarm": "Monster Alarm har uppdaterats",
 	"Successfully Updated Quest Alarm": "Quest Alarm har uppdaterats",
 	"Successfully Updated Raid Alarm": "Raid Alarm har uppdaterats",
 	"Delete ALL tracked Mons?": "Ta bort ALLA spårade Monster?",
-	"Delete ALL Raid/Eggs?": "Radera ALLA Raid / ägg?",
-	"Delete ALL Quests?": "Radera ALLA uppdrag?",
+	"Delete ALL Raid/Eggs?": "Radera ALLA Raid / Ägg?",
+	"Delete ALL Quests?": "Radera ALLA Quests?",
 	"This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?": "Detta tar bort alla dina Ägg- och Raid Alarm och kan inte ångras, är du säker?",
 	"This will delete all your Pokémon Alarms and cannot be undone, are you sure ?": "Detta tar bort alla dina Pokémon Alarm och kan inte ångras, är du säker?",
 	"This will delete all your Quests Alarms and cannot be undone, are you sure ?": "Detta tar bort alla dina Quest Alarm och kan inte ångras, är du säker?",
@@ -61,7 +61,7 @@
 	"AREAS": "OMRÅDEN",
 	"Your alarms are currently disabled!": "Dina larm är för närvarande inaktiverade!",
 	"You Request couldn't not be handled": "Din begäran kunde inte hanteras",
-	"Your location is not set. Distance settings won't be taken into account.": "Din plats är inte inställd. Avståndsinställningar kommer inte att räknas in.",
+	"Your location is not set. Distance settings won't be taken into account.": "Din plats är inte inställd. Avståndsinställningar kommer inte att inkluderas.",
 	"Distance": "Distans",
 	"Form": "Form",
 	"Gender": "Kön",
@@ -69,10 +69,10 @@
 	"All": "Allt",
 	"Male": "Manlig",
 	"Female": "Kvinna",
-	"Clean": "Rena",
+	"Clean": "Städa",
 	"Yes": "Ja",
 	"No": "Nej",
-	"Apply to all Pokémons": "Applicera på alla Pokémons",
+	"Apply to all Pokémons": "Använd på alla Pokémons",
 	"NEW MONSTER ALARM": "NYTT MONSTERALARM",
 	"Type": "Typ",
 	"to display all Pokémons": "för att visa alla Pokémons",
@@ -80,15 +80,15 @@
 	"Cancel": "Ångra",
 	"Submit": "Skicka",
 	"NEW RAID ALARM": "NYTT RAIDALARM",
-	"Select Egg Levels you want to add": "Välj Ägg Levels du vill lägga till",
-	"Select Raid Levels you want to add": "Välj Raid Levels du vill lägga till",
-	"Select Pokémon Quests you want to add": "Välj Pokémon Quest du vill lägga till",
-	"Select the Raid Bosses you want to add": "Välj de Raid Bossar du vill lägga till",
+	"Select Egg Levels you want to add": "Välj vilka Ägg Levels du vill lägga till",
+	"Select Raid Levels you want to add": "Välj vilka Raid Levels du vill lägga till",
+	"Select Pokémon Quests you want to add": "Välj vilka Pokémon Quest du vill lägga till",
+	"Select the Raid Bosses you want to add": "Välj vilka RaidBossar du vill lägga till",
 	"NEW QUEST ALARM": "NYTT QUESTALARM",
-	"Select Pokémon Quests you want to add (Pokemons Currently available on Map)": "Välj Pokémon-uppdrag du vill lägga till (Pokemons finns för närvarande på kartan)",
-	"Pokemons Currently available on Map": "Pokemons finns för närvarande på kartan",
-	"Or use search below to add another pokemon": "Eller använd sökningen nedan för att lägga till en annan pokemon",
-	"Select Quests Items you want to add": "Välj uppdrag som du vill lägga till",
+	"Select Pokémon Quests you want to add (Pokémons Currently available on Map)": "Välj vilka Pokémon Quests du vill lägga till (Pokémons som för närvarande finns på kartan)",
+	"Pokemons Currently available on Map": "Pokémons för närvarande på kartan",
+	"Or use search below to add another pokemon": "Eller använd sökningen nedan för att lägga till en annan Pokémon",
+	"Select Quests Items you want to add": "Välj Item belöning som du vill lägga till",
 	"Level": "Nivå",
 	"Update": "Uppdatera",
 	"Close": "Stäng",
@@ -96,14 +96,14 @@
 	"Buy or Renew a Subscription": "Köp eller förnya en prenumeration",
 	"It looks like you do not have a valid subscription to this tool yet": "Det verkar som om du inte har en giltig prenumeration på det här verktyget ännu",
 	"It looks like your subscription has expired on": "Det verkar som om din prenumeration har gått ut den",
-	"Your subscription is still valid until": "Din prenumeration är fortfarande giltig till",
+	"Your subscription is still valid until": "Din prenumeration är fortfarande giltig t.o.m",
 	"Back to": "Tillbaka till",
 	"Renew": "Förnya",
 	"Subscription valid until": "Prenumeration giltigt till",
 	"Alerts": "Varningar",
-	"ALL Monters Cleaning": "ALL Monsters Städning",
-	"ALL Raid/Egg Cleaning": "ALL Raid / Egg Städning",
-	"ALL Quests Cleaning": "ALLA Quests Städning",
+	"ALL Monters Cleaning": "Städa alla Monsteralarm",
+	"ALL Raid/Egg Cleaning": "Städa alla Raid / Egg alarm",
+	"ALL Quests Cleaning": "Städa alla Questsalarm",
 	"Your Location is not set and cannot be set here!": "Din plats är inte angiven och kan inte ställas in här!",
 	"Your Location is set to": "Din plats är inställd på",
 	"You have not set any area yet!": "Du har inte angett något område än!",
@@ -129,12 +129,12 @@
 	"Delete tracking for": "Ta bort spårning för",
 	"This will delete tracking for": "Detta tar bort spårning för",
 	"Are you sure?": "Är du säker?",
-	"Delete tracking for Eggs Level": "Ta bort spårning för äggnivå",
-	"This will delete tracking for Eggs Level": "Detta tar bort spårning för äggnivå",
-	"Delete tracking for Raids Level": "Ta bort spårning för Raids Level",
-	"This will delete tracking for Raids Level": "Detta tar bort spårning för Raids Level",
-	"Delete Raid tracking for": "Ta bort Raid-spårning för",
-	"This will delete Raid tracking for": "Detta tar bort Raid-spårning för",
+	"Delete tracking for Eggs Level": "Ta bort spårning för ägg nivå",
+	"This will delete tracking for Eggs Level": "Detta tar bort spårning för ägg nivå",
+	"Delete tracking for Raids Level": "Ta bort spårning för Raids nivå",
+	"This will delete tracking for Raids Level": "Detta tar bort spårning för Raids nivå",
+	"Delete Raid tracking for": "Ta bort Raidspårning för",
+	"This will delete Raid tracking for": "Detta tar bort Raidspårning för",
 	"Delete Quests tracking for": "Ta bort Questspårning för",
 	"This will delete Quests tracking for": "Detta kommer att ta bort Questspårning för",
 	"Delete Quests Item tracking": "Ta bort spårning av Quest Item",
@@ -156,8 +156,36 @@
 	"Successfully Update Distance on ALL Raids & Eggs": "Uppdatera avstånd på ALLA Raids & Eggs",
 	"Successfully Update Distance on ALL Quests": "Uppdatera avstånd på ALLA uppdrag framgångsrikt",
 	"UPDATE": "UPPDATERA",
-	"UPDATE DISTANCE": "UPPDATERA AVSTAND",
-	"You have not set any Alarm for ALL Pokemons, Please select a Gen!": "Du har inte ställt in något larm för ALLA Pokemons. Välj en Generation!",
-	"You have not set any Alarms for this Generation!": "Du har inte ställt in några larm för denna generation!"
-
+	"UPDATE DISTANCE": "UPPDATERA AVSTÅND",
+	"You have not set any Alarm for ALL Pokemons, Please select a Gen!": "Du har inte ställt in något larm för ALLA Pokémons. Välj en Generation!",
+	"You have not set any Alarms for this Generation!": "Du har inte ställt in några larm för denna generation!",
+	"User & Channel Management":"Användar och kanalhantering",
+	"Back to own Account":"Tillbaka till eget konto",
+   	"Discord or Telegram ID":"Discord eller Telegram ID",
+   	"ADMIN MODE ACTIVE":"ADMIN LÄGE AKTIVT",
+   	"User not found. Try Again":"Användaren hittades inte, försök igen",
+   	"USERS LIST":"ANVÄNDARLISTA",
+   	"DISCORD CHANNELS LIST":"DISCORD KANAL LISTA",
+   	"TELEGRAM CHANNELS LIST":"TELEGRAM KANAL LISTA",
+   	"Migrate":"Migrera",
+   	"Migrate Your Account":"Migriera ditt konto",
+   	"You are currently connected as":"Du är för närvarande inloggad som",
+   	"Your account will be migrated to":"Ditt konto kommer att migreras till",
+   	"Migration is definitive and cannot be reversed":"Migration är slutgiltigt och kan inte ångras",
+   	"Start account migration by":"Starta kontomigration genom att",
+   	"logging into your target telegram account":"logga in på ditt telegramkonto",
+   	"Sorry Migration From Telegram to Discord is not available yet":"Tyvärr är det inte möjligt att migrera från Telegram till Discord ännu",
+   	"User Already Exist":"Användaren finns redan",
+   	"Cannot Migrate to an existing User":"Kan inte migrera till en befintlig användare",
+   	"CONFIRM ACCOUNT MIGRATION":"BEKRÄFTA KONTOMIGRATION",
+   	"Channel Synchronization":"Kanalsynkronisation",
+   	"Successfully Synchronized Channels":"Kanalsynkronisation lyckades",
+   	"Please select channels you want to synchronize with current channel":"Välj vilka kanaler du vill synkronisera med denna kanal",
+   	"This will DELETE AND REPLACE all current tracking from ALL chosen channels":"Detta kommer att RADERA och ERSÄTTA alla befintliga spårningar från ALLA valda kanaler",
+   	"TELEGRAM CHANNELS TO SYNC WITH":"TELEGRAMKANAL ATT SYNKRONISERA MED",
+   	"TELEGRAM DISCORD TO SYNC WITH":"TELEGRAM DISCORD ATT SYNKRONISERA MED",
+   	"CONFIRM CHANNEL SYNCHRONIZATION":"BEKRÄFTA KANALSYNKRONISATION",
+   	"Synchronize Other Channels with this one":"Synkronisera andra kanaler med denna",
+   	"Select Energy Rewards you want to add":"Välj Energy belöning att lägga till",
+   	"Mega Energy":"Mega Energy"
 }
