Add Support for Invasions

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -188,5 +188,35 @@
     "Select Energy Rewards you want to add":"Sélectionnez les types de Méga Energie à ajouter",
     "Mega Energy":"Mega Energie",
     "Delete Quests tracking for this Mega Energy":"Supprimer le Suivi des Quêtes pour cette Mega Energie",
-    "Delete Quests tracking for this item":"Supprimer le Suivi des Quêtes pour cet object"
+    "Delete Quests tracking for this item":"Supprimer le Suivi des Quêtes pour cet object",
+    "This will delete tracking for invasion type":"Cette action supprimera les invasions de type",
+    "Delete tracking for Invasions":"Supprimer les suivi des Invasions",
+    "Delete ALL Invasions?":"Supprimer toutes les Invasions?",
+    "This will delete all your Invasions Alarms and cannot be undone":"Cette action supprimera le suivi pour TOUTES les Invasions",
+    "Update Distance for all tracked Invasions?":"Modifier la Distance pour toutes les Invasions?",
+    "This will update Distance settings for ALL tracked Invasions":"Cette action modifiera la distance de suivi pour TOUTES les Invasions",
+    "ALL Invasions Cleaning":"Nettoyer TOUTES les Invasions",
+    "NEW INVASIONS ALARM":"Nouvelle Alarme Invasion",
+    "INVASIONS TRACKED":"INVASIONS SUIVIES",
+    "ALL INVASIONS":"TOUTES LES INVASIONS",
+    "mixed":"mixed",
+    "dark":"ténèbre",
+    "fairy":"fée",
+    "water":"eau",
+    "steel":"acier",
+    "bug":"insecte",
+    "fire":"feux",
+    "ice":"glace",
+    "ground":"sol",
+    "ghost":"spectre",
+    "electric":"électrique",
+    "normal":"normal",
+    "psychic":"psy",
+    "rock":"roche",
+    "fighting":"combat",
+    "poison":"poison",
+    "grass":"plante",
+    "flying":"vol",
+    "dragon":"dragon",
+    "everything":"tous"
 }
