--- a/locales/nl.json
+++ b/locales/nl.json
@@ -188,5 +188,35 @@
     "Select Energy Rewards you want to add":"Selecteer de Energie Beloningen die je wil toevoegen",
     "Mega Energy":"Mega Energie",
     "Delete Quests tracking for this Mega Energy":"Verwijder gevolgde Quest voor deze Mega Energie",
-    "Delete Quests tracking for this item":"Verwijder gevolgde Quest voor dit item"
+    "Delete Quests tracking for this item":"Verwijder gevolgde Quest voor dit item",
+    "This will delete tracking for invasion type":"Hiermee verwijder je alle invasies die je volgt",
+    "Delete tracking for Invasions":"Verwijder Invasies die je volt",
+    "Delete ALL Invasions?":"Verwijder ALLE Invasies?",
+    "This will delete all your Invasions Alarms and cannot be undone":"Dit verwijderd alle ingestelde invasies en kan niet terug gedraaid worden",
+    "Update Distance for all tracked Invasions?":"Aanpassen afstand voor alle Invasies die je volgt?",
+    "This will update Distance settings for ALL tracked Invasions":"Hiermee pas je de afstand aan voor ALLE Invasies die je volgt",
+    "ALL Invasions Cleaning":"ALLE Invasies opschonen?",
+    "NEW INVASIONS ALARM":"NIEUW INVASIE ALARM",
+    "INVASIONS TRACKED":"INGESTELDE INVASIES",
+    "ALL INVASIONS":"ALLE INVASIES",
+    "mixed":"gemengd",
+    "dark":"duister",
+    "fairy":"fee",
+    "water":"water",
+    "steel":"staal",
+    "bug":"insect",
+    "fire":"vuur",
+    "ice":"ijs",
+    "ground":"grond",
+    "ghost":"geest",
+    "electric":"electrisch",
+    "normal":"normaal",
+    "psychic":"psychisch",
+    "rock":"steen",
+    "fighting":"vechten",
+    "poison":"vergif",
+    "grass":"gras",
+    "flying":"vliegend",
+    "dragon":"draak",
+    "everything":"alles"
 }
