Update nl.json (#48)
* Update nl.json

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -165,5 +165,58 @@
     "User not found. Try Again":"Gebruiker niet gevonden, probeer nogmaals",
     "USERS LIST":"GEBRUIKERS",
     "DISCORD CHANNELS LIST":"DICORD KANALEN",
-    "TELEGRAM CHANNELS LIST":"TELEGRAM KANALEN"
+    "TELEGRAM CHANNELS LIST":"TELEGRAM KANALEN",
+    "Migrate":"Migreer",
+    "Migrate Your Account":"Migreer je account",
+    "You are currently connected as":"Je bent nu verbonden als",
+    "Your account will be migrated to":"Je account word gemigreerd naar",
+    "Migration is definitive and cannot be reversed":"Migratie is definitief en kan niet worden teruggedraaid",
+    "Start account migration by":"Start account migratie voor",
+    "logging into your target telegram account":"inloggen op je telegram account",
+    "Sorry Migration From Telegram to Discord is not available yet":"Sorry, migratie van Telegram naan Discord is niet beschikbaar",
+    "User Already Exist":"Gebruiker bestaat reeds",
+    "Cannot Migrate to an existing User":"Migratie naar bestaande gebruiker is niet mogelijk",
+    "CONFIRM ACCOUNT MIGRATION":"BEVESTIG ACCOUNT MIGRATIE",
+    "Channel Synchronization":"Kanaal Synchronisatie",
+    "Successfully Synchronized Channels":"Kanalen succesvol gesynchroniseerd",
+    "Please select channels you want to synchronize with current channel":"Se;ecteer de kanalen die je wil synchroniseren",
+    "This will DELETE AND REPLACE all current tracking from ALL chosen channels":"Dit verwijderd en overschrijft alle trackings voor de gekozen kanalen",
+    "TELEGRAM CHANNELS TO SYNC WITH":"TELEGRAM KANALEN OM MEE TE SYNCHRONISEREN",
+    "TELEGRAM DISCORD TO SYNC WITH":"TELEGRAM DISCORD OM MEE TE SYCHRONISEREN",
+    "CONFIRM CHANNEL SYNCHRONIZATION":"BEVESTIG KANAAL SYNCHRONISATIE",
+    "Synchronize Other Channels with this one":"Synchroniseer andere kanalen met deze",
+    "Select Energy Rewards you want to add":"Selecteer de Energie Beloningen die je wil toevoegen",
+    "Mega Energy":"Mega Energie",
+    "Delete Quests tracking for this Mega Energy":"Verwijder gevolgde Quest voor deze Mega Energie",
+    "Delete Quests tracking for this item":"Verwijder gevolgde Quest voor dit item",
+    "This will delete tracking for invasion type":"Hiermee verwijder je alle invasies die je volgt",
+    "Delete tracking for Invasions":"Verwijder Invasies die je volt",
+    "Delete ALL Invasions?":"Verwijder ALLE Invasies?",
+    "This will delete all your Invasions Alarms and cannot be undone":"Dit verwijderd alle ingestelde invasies en kan niet terug gedraaid worden",
+    "Update Distance for all tracked Invasions?":"Aanpassen afstand voor alle Invasies die je volgt?",
+    "This will update Distance settings for ALL tracked Invasions":"Hiermee pas je de afstand aan voor ALLE Invasies die je volgt",
+    "ALL Invasions Cleaning":"ALLE Invasies opschonen?",
+    "NEW INVASIONS ALARM":"NIEUW INVASIE ALARM",
+    "INVASIONS TRACKED":"INGESTELDE INVASIES",
+    "ALL INVASIONS":"ALLE INVASIES",
+    "mixed":"gemengd",
+    "dark":"duister",
+    "fairy":"fee",
+    "water":"water",
+    "steel":"staal",
+    "bug":"insect",
+    "fire":"vuur",
+    "ice":"ijs",
+    "ground":"grond",
+    "ghost":"geest",
+    "electric":"electrisch",
+    "normal":"normaal",
+    "psychic":"psychisch",
+    "rock":"steen",
+    "fighting":"vechten",
+    "poison":"vergif",
+    "grass":"gras",
+    "flying":"vliegend",
+    "dragon":"draak",
+    "everything":"alles"
 }
