--- a/locales/pl.json
+++ b/locales/pl.json
@@ -115,40 +115,69 @@
     "Click 'Logout' below if you are ready to end your current session":"Kliknij 'Wyloguj się', aby się wylogować",
     "Logout":"Wyloguj się",
     "Settings":"Ustawienia",
-	"ALARM CONFIGURATION":"",
-	"LOGIN WITH DISCORD":"ZALOGUJ SIĘ KONTEM Z DISCORDA",
-	"You have been successfully logged out":"Nastąpiło prawidłowe wylogowanie",
-	"Location updated successfully":"Lokalizacja została zaktualizowana",
-	"Address not found. Try Again":"Nie znaleziono adresu. Spróbuj ponownie",
-	"LOCATION":"LOKALIZACJA",
-	"It can be set hereunder":"Można ją ustawić poniżej",
-	"Update My Location":"Zaktualizuj lokalizację ręcznie",
-	"Street Name":"Ulica (wymagane)",
-	"City":"Miasto (wymagane)",
-	"NOT REGISTERED":"BRAK DOSTĘPU",
-	"Delete tracking for":"Usunąć powiadomienie dla:",
-	"This will delete tracking for":"Ta czynność spowoduje usunięcie śledzenia dla:",
-	"Are you sure?":"Na pewno chcesz usunąć?",
-	"Could not set Location":"Nie można ustawić lokalizacji",
-	"User denied the request for Geolocation":"Przeglądarka nie ma dostępu do wykrycia lokalizacji",
-	"Location information is unavailable":"Informacja o lokalizacji jest niedostępna",
-	"The request to get user location timed out":"Prakroczono czas uzyskiwania lokalizacji",
-	"An unknown error occurred":"Wystąpił nieznany błąd",
-	"Geolocation is not supported by this browser":"Ta przeglądarka nie jest w stanie wykryć lokalizacji",
-	"Successfully Update Distance on ALL Pokémons":"Zaktualizowano odległość we wszystkich Pokemonach",
-	"Successfully Update Distance on ALL Raids & Eggs":"Zaktualizowano odległość we wszystkich Raidach",
-	"Successfully Update Distance on ALL Quests":"Zaktualizowano odległość we wszystkich Questach",
-	"UPDATE DISTANCE":"ZAKTUALIZUJ ODLEGŁOŚĆ",
-	"Update Distance for all tracked Pokémons?":"Zaktualizować odległość dla wszystkich śledzonych Pokemonów?",
-	"This will update Distance settings for ALL tracked Pokémons":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Pokemonów",
-	"Please Set New Distance":"Nowa odległość",
-	"Update Distance for all tracked Quests?":"Zaktualizować odległość dla wszystkich śledzonych Questów?",
-	"This will update Distance settings for ALL tracked Quests":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Questów",
-	"Update Distance for all tracked Raids & Eggs?":"Zaktualizować odległość dla wszystkich śledzonych Raidów?",
-	"This will update Distance settings for ALL tracked Raids & Eggs":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Raidów",
+    "ALARM CONFIGURATION":"",
+    "LOGIN WITH DISCORD":"ZALOGUJ SIĘ KONTEM Z DISCORDA",
+    "You have been successfully logged out":"Nastąpiło prawidłowe wylogowanie",
+    "Location updated successfully":"Lokalizacja została zaktualizowana",
+    "Address not found. Try Again":"Nie znaleziono adresu. Spróbuj ponownie",
+    "LOCATION":"LOKALIZACJA",
+    "It can be set hereunder":"Można ją ustawić poniżej",
+    "Update My Location":"Zaktualizuj lokalizację ręcznie",
+    "Street Name":"Ulica (wymagane)",
+    "City":"Miasto (wymagane)",
+    "NOT REGISTERED":"BRAK DOSTĘPU",
+    "Delete tracking for":"Usunąć powiadomienie dla:",
+    "This will delete tracking for":"Ta czynność spowoduje usunięcie śledzenia dla:",
+    "Are you sure?":"Na pewno chcesz usunąć?",
+    "Could not set Location":"Nie można ustawić lokalizacji",
+    "User denied the request for Geolocation":"Przeglądarka nie ma dostępu do wykrycia lokalizacji",
+    "Location information is unavailable":"Informacja o lokalizacji jest niedostępna",
+    "The request to get user location timed out":"Prakroczono czas uzyskiwania lokalizacji",
+    "An unknown error occurred":"Wystąpił nieznany błąd",
+    "Geolocation is not supported by this browser":"Ta przeglądarka nie jest w stanie wykryć lokalizacji",
+    "Successfully Update Distance on ALL Pokémons":"Zaktualizowano odległość we wszystkich Pokemonach",
+    "Successfully Update Distance on ALL Raids & Eggs":"Zaktualizowano odległość we wszystkich Raidach",
+    "Successfully Update Distance on ALL Quests":"Zaktualizowano odległość we wszystkich Questach",
+    "UPDATE DISTANCE":"ZAKTUALIZUJ ODLEGŁOŚĆ",
+    "Update Distance for all tracked Pokémons?":"Zaktualizować odległość dla wszystkich śledzonych Pokemonów?",
+    "This will update Distance settings for ALL tracked Pokémons":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Pokemonów",
+    "Please Set New Distance":"Nowa odległość",
+    "Update Distance for all tracked Quests?":"Zaktualizować odległość dla wszystkich śledzonych Questów?",
+    "This will update Distance settings for ALL tracked Quests":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Questów",
+    "Update Distance for all tracked Raids & Eggs?":"Zaktualizować odległość dla wszystkich śledzonych Raidów?",
+    "This will update Distance settings for ALL tracked Raids & Eggs":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Raidów",
     "UPDATE": "ZAPISZ",
-	"You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Brak aktywnych powiadomień dla 'wszystkich' Pokemonów - wybierz generację.",
-	"You have not set any Alarms for this Generation!":"Brak aktywnych powiadomień dla tej generacji.",
-	"ALL":"WSZYSTKO",
-	"You have not set any area yet!":"Nie masz ustawionego żadnego obszaru!"
+    "You have not set any Alarm for ALL Pokemons, Please select a Gen!":"Brak aktywnych powiadomień dla 'wszystkich' Pokemonów - wybierz generację.",
+    "You have not set any Alarms for this Generation!":"Brak aktywnych powiadomień dla tej generacji.",
+    "ALL":"WSZYSTKO",
+    "You have not set any area yet!":"Nie masz ustawionego żadnego obszaru!",
+    "User & Channel Management":"Zarządzanie użytkownikami i kanałami",
+    "Back to own Account":"Powrót do konta Administratora",
+    "Discord or Telegram ID":"ID z Discorda lub Telegrama",
+    "Go":"Przejdź",
+    "ADMIN MODE ACTIVE":"TRYB ADMINA AKTYWNY",
+    "User not found. Try Again":"Brak użytkownika. Spróbuj ponownie",
+    "You have not set any Alarm yet!":"Nie masz ustawionych żadnych powiadomień!",
+    "Channel Synchronization":"Synchronizacja kanałów",
+    "Please select channels you want to synchronize with current channel":"Wybierz kanały które chcesz zsynchronizować z wybranym kanałem",
+    "This will DELETE AND REPLACE all current tracking from ALL chosen channels":"Zostaną usunięte i zastąpione wszystkie bieżące ustawienia śledzenia na wybranych kanałach",
+    "DISCORD CHANNELS TO SYNC WITH":"KANAŁY DISCORDOWE DO ZSYNCHRONIZOWANIA",
+    "TELEGRAM CHANNELS TO SYNC WITH":"KANAŁY TELEGRAMOWE DO ZSYNCHRONIZOWANIA",
+    "CONFIRM CHANNEL SYNCHRONIZATION":"POTWIERDŹ SYNCHRONIZACJĘ",
+    "Synchronize Other Channels with this one":"Zsynchronizuj inne kanały z bieżącym kanałem",
+    "Successfully Synchronized Channels":"Zsynchronizowano kanały",
+    "Select Energy Rewards you want to add":"Wybierz Mega Energię którą chcesz dodać",
+    "Mega Energy":"Mega Energia",
+    "This will delete tracking for invasion type":"Zostaną usunięte Inwazje typu",
+    "Delete tracking for Invasions":"Usuń śledzenie Inwazji",
+    "Delete ALL Invasions?":"Usunąć wszystkie Inwazje?",
+    "This will delete all your Invasions Alarms and cannot be undone":"Zostaną usunięte wszystkie powiadomienia o Inwazjach bez opcji ich przewrócenia",
+    "Update Distance for all tracked Invasions?":"Zaktualizować odległość dla wszystkich śledzonych Inwazji?",
+    "This will update Distance settings for ALL tracked Invasions":"Ta czynność spowoduje zaktualizowanie odległości dla wszystkich śledzonych Inwazji",
+    "ALL Invasions Cleaning":"Czyszczenie nieaktywnych Inwazji",
+    "NEW INVASIONS ALARM":"POWIADOMIENIE DLA NOWEJ INWAZJI",
+    "INVASIONS TRACKED":"ŚLEDZONE INWAZJE",
+    "ALL INVASIONS":"WSZYSTKIE INWAZJE",
+    "mixed":"mixed",
+    "INVASIONS":"INWAZJE"
 }
