--- a/locales/de.json
+++ b/locales/de.json
@@ -187,5 +187,37 @@
    "CONFIRM CHANNEL SYNCHRONIZATION":"BESTÄTIGE KANALSYNCHRONISATION",
    "Synchronize Other Channels with this one":"Synchronisiere andere Kanäle mit diesen Kanal.",
    "Select Energy Rewards you want to add":"Wähle Energie Belohungen um diese hinzu zu fügen",
-   "Mega Energy":"Mega Energie"
+   "Mega Energy":"Mega Energie",
+   "Delete Quests tracking for this Mega Energy":"Lösche das Quests-Tracking für diese Mega-Energie",
+   "Delete Quests tracking for this item":"Dadurch wird das Quest Tracking gelöscht für dieses Item",
+   "This will delete tracking for invasion type":"Dadurch wird das Tracking für den Invasionstyp gelöscht",
+   "Delete tracking for Invasions":"Lösche das Tracking für Invasion",
+   "Delete ALL Invasions?":"Möchtest du ALLE Invasionen löschen?",
+   "This will delete all your Invasions Alarms and cannot be undone":"Dadurch werden alle Invastionsalarme gelöscht und kann nicht rückgängig gemacht werden",
+   "Update Distance for all tracked Invasions?":"Möchstest du die Distanz für alle getrackteten Invasionen aktualisieren?",
+   "This will update Distance settings for ALL tracked Invasions":"Dadurch werden alle Distanzeinstellungen für Invasionen aktualisiert",
+   "ALL Invasions Cleaning":"ALLE INVASIONEN SÄUBERN",
+   "NEW INVASIONS ALARM":"NEUE INVASION EINSTELLUNG",
+   "INVASIONS TRACKED":"INVASIONS EINSTELLUNGEN",
+   "ALL INVASIONS":"ALLE INVASIONEN",
+   "mixed":"Gemischt",
+   "dark":"Dunkel",
+   "fairy":"Fee",
+   "water":"Wasser",
+   "steel":"Stahl",
+   "bug":"Käfer",
+   "fire":"Feuer",
+   "ice":"Eis",
+   "ground":"Boden",
+   "ghost":"Geist",
+   "electric":"Elektro",
+   "normal":"Normal",
+   "psychic":"Psycho",
+   "rock":"Stein",
+   "fighting":"Kampf",
+   "poison":"Gift",
+   "grass":"Grass",
+   "flying":"Flug",
+   "dragon":"Drache",
+   "everything":"alles"
 }
